keep platform-specific for config files

--- a/template/flow/files/Rakefile
+++ b/template/flow/files/Rakefile
@@ -9,4 +9,5 @@ end
 # This file is empty on purpose, you can edit it to add your own tasks.
 # Use `rake -T' to see the list of all tasks.
 # For iOS specific settings, refer to config/ios.rb.
+# For OS X specific settings, refer to config/osx.rb.
 # For Android specific settings, refer to config/android.rb.
