--- a/ui_app/Rakefile
+++ b/ui_app/Rakefile
@@ -1,10 +1,6 @@
 # -*- coding: utf-8 -*-
 
-begin
-  require 'bundler'
-  Bundler.require
-rescue LoadError
-end
+require '../lib/motion-flow.rb'
 
 # This file is empty on purpose, you can edit it to add your own tasks.
 # Use `rake -T' to see the list of all tasks.
