--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: objective-c
-osx_image: xcode7.2
+ruby:
+  - "2.3.1"
+osx_image: xcode7.3
 before_install:
   - (ruby --version)
   - sudo chown -R travis ~/Library/RubyMotion
