--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - sudo mkdir -p ~/Library/RubyMotion/build
   - sudo chown -R travis ~/Library/RubyMotion/build
 script:
+  - rake build
   - cd test
   - gem install eventmachine -- --with-cppflags=-I/usr/local/opt/openssl/include --no-rdoc --no-ri
   - gem install thin --no-rdoc --no-ri
